fix banner overflow in error pages

--- a/frontend/resourceadm/pages/ErrorPage/ErrorPage.module.css
+++ b/frontend/resourceadm/pages/ErrorPage/ErrorPage.module.css
@@ -1,4 +1,5 @@
 .pageWrapper {
   padding-inline: 10%;
   padding-block: 50px;
+  padding-bottom: 200px;
 }
